--- a/Changelog.txt
+++ b/Changelog.txt
@@ -52,7 +52,7 @@
 
 - Fix a regression in 7.2 that caused the popup used for editing fields in the book list to be mis-positioned on very wide monitors
 
-- Version 7.5.1 fixes a bug in 7.5.0 where calibre would not start up using dark colors when the system was in dark mode on some windows installs
+- [2052766] Version 7.5.1 fixes a bug in 7.5.0 where calibre would not start up using dark colors when the system was in dark mode on some windows installs and another bug that could cause errors when using cover grid mode with covers stored in CMYK colorspace
 
 :: improved recipes
 - El Diplo
