--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,6 +23,44 @@
 # - title by author
 # }}}
 
+{{{ 7.7.0 2024-03-14
+
+:: new features
+
+- [2056116] Trim image: Allow specifying the size of the trim rectangle using numbers
+
+- [2056664] Full text search: Allow pressing Ctrl+S to select the current book in the calibre book list
+
+- Speed up scrolling through the book list book-by-book by only redrawing the book details panel when scrolling pauses
+
+- Add a tweak under Preferences->Tweaks to set the first day of the week in popup calendars used to input dates
+
+:: bug fixes
+
+- [2056470] CHM Input: Handle CHM files with no HHC Table of Contents
+
+- E-book viewer: Fix a few settings such as pages per screen and header/footers not being saved in profiles
+
+- [2056614] Full text search: Ignore text inside <ruby> tags when indexing books
+
+- DOCX Output: Preserve spaces around soft hyphens
+
+- Book details popup: Copy the original cover image to the clipboard even when the image is rescaled to fit into view
+
+- Fix changing disabled colors in the UI color palette overriding non-disabled colors
+
+- Content server: Fix deletion of viewer profiles not working
+
+:: improved recipes
+- LiveMint
+- Bloomberg
+- Natural Geographic
+- MIT Technology Review
+- NY Review of Books
+- Scientific American
+
+}}}
+
 {{{ 7.6.0 2024-03-01
 
 :: new features
