Fix #2058036 [v7.7 whats-new error: "Natural Geographic"](https://bugs.launchpad.net/calibre/+bug/2058036)

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -54,7 +54,7 @@
 :: improved recipes
 - LiveMint
 - Bloomberg
-- Natural Geographic
+- National Geographic
 - MIT Technology Review
 - NY Review of Books
 - Scientific American
